changes have been made periodt

--- a/css_basic/base.css
+++ b/css_basic/base.css
@@ -1,5 +1,9 @@
 body {
-    margin: 0;
-    padding: 0;
     font-family: Arial, sans-serif;
-}
+    background-color: rgb(230, 173, 229);
+     }
+ h1 {
+        color: rgb(255, 0, 0);
+        text-align: center;
+    }
+
