--- a/css_basic/styles.css
+++ b/css_basic/styles.css
@@ -18,10 +18,13 @@ body {
   article {
     flex: 2; 
     overflow-y: auto; 
+    overflow-y: auto;
   }
   
   
   aside {
     flex: 1; 
     overflow-y: auto; 
+    overflow-y: auto;
   }
+ 
