alot of changes

--- a/css_basic/styles.css
+++ b/css_basic/styles.css
@@ -4,6 +4,7 @@ body {
     height: 100vh; 
     margin: 20px; 
     background-color: bisque;
+    padding: 20px;
   }
   
   
@@ -19,7 +20,14 @@ body {
     flex: 2; 
     overflow-y: auto; 
     overflow-y: auto;
+    block-size: 100%
   }
+  
+  h1 { display: block; font-size: 2em; margin-top: o.67em;
+    }
+    table, th, td {
+        border: 1px solid
+    }
   
   
   aside {
@@ -27,4 +35,4 @@ body {
     overflow-y: auto; 
     overflow-y: auto;
   }
- 
+
